[metadata]
name = pytest-timeout
description = pytest plugin to abort hanging tests
long_description = file: README.rst
long_description_content_type = text/x-rst
version = 2.3.1
author = Floris Bruynooghe
author_email = flub@devork.be
url = https://github.com/pytest-dev/pytest-timeout
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: Developers
    License :: DFSG approved
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing
    Framework :: Pytest

[options]
py_modules = pytest_timeout
install_requires =
    pytest>=7.0.0
python_requires = >=3.7

[options.entry_points]
pytest11 =
    timeout = pytest_timeout
